--- a/admin/scss/ie7.scss
+++ b/admin/scss/ie7.scss
@@ -199,3 +199,5 @@ table.ss-gridfield-table {
 	}	
 }
 		
+
+@include IEVerticalPanelText; //IE7 needs this defined outside .cms-panel
